Trying algorithms and evaluating how much accurate are them